--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-langchain
-langchain-community
+streamlit
 openai
 faiss-cpu
-pypdf
-streamlit
 pinecone
+langchain
+langchain-community
+langchain-openai
+pypdf
